test/cli/test/context-foreach-multi/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: check-images
  rules:
  - foreachValues:
    - data:
      - ok
      - blocked
    - data:
      - ok
      - blocked
    name: check-images
